Work in progress

--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "8477c89f-d8b1-48a2-a44e-ad2a4b41ae6e",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "id": "39d0532c",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "id": "ed4553a9",
    "metadata": {},
    "outputs": [],
@@ -111,22 +111,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "c9db0df2",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'CentralityAlgorithm' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m algorithms_to_run \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m----> 2\u001b[0m algorithms_to_run\u001b[38;5;241m.\u001b[39mappend(CentralityAlgorithm(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdegree_centrality\u001b[39m\u001b[38;5;124m\"\u001b[39m, nx\u001b[38;5;241m.\u001b[39mdegree_centrality, {}, {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdirection\u001b[39m\u001b[38;5;124m\"\u001b[39m:\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mboth\u001b[39m\u001b[38;5;124m\"\u001b[39m}))\n\u001b[1;32m      3\u001b[0m algorithms_to_run\u001b[38;5;241m.\u001b[39mappend(CentralityAlgorithm(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124min_degree_centrality\u001b[39m\u001b[38;5;124m\"\u001b[39m, nx\u001b[38;5;241m.\u001b[39min_degree_centrality, {}, {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdirection\u001b[39m\u001b[38;5;124m\"\u001b[39m:\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdirected\u001b[39m\u001b[38;5;124m\"\u001b[39m}))\n\u001b[1;32m      4\u001b[0m algorithms_to_run\u001b[38;5;241m.\u001b[39mappend(CentralityAlgorithm(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mout_degree_centrality\u001b[39m\u001b[38;5;124m\"\u001b[39m, nx\u001b[38;5;241m.\u001b[39mout_degree_centrality, {}, {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdirection\u001b[39m\u001b[38;5;124m\"\u001b[39m:\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdirected\u001b[39m\u001b[38;5;124m\"\u001b[39m}))\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'CentralityAlgorithm' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "algorithms_to_run = []\n",
     "algorithms_to_run.append(CentralityAlgorithm(\"degree_centrality\", nx.degree_centrality, {}, {\"direction\":\"both\"}))\n",
@@ -151,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "942890ed",
    "metadata": {},
    "outputs": [],
@@ -162,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "id": "4a197da6",
    "metadata": {},
    "outputs": [
@@ -172,7 +160,7 @@
        "27"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -182,7 +170,7 @@
        "21"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "id": "8349750b",
    "metadata": {},
    "outputs": [
@@ -246,25 +234,12 @@
       "[ log ]: ===============================\n",
       "[ log ]: Running 'Harmonic Centrality' (9/10)\n",
       "[ log ]: Option: '{'direction': 'both'}'\n",
-      "[ log ]: Result: '{'R166.2': 0.874995062724865, 'AC3.2': 0.6881624757639293, '4R79.2': 2.0465757523155546, 'T16H12.5': 0.4151608686144344, 'Y74C9A.3': 0.6111959403861045, 'C36B7.6': 1.2933718507315621, 'F55F8.5': 0.8726099539023844, 'K01G5.2': 0.6205435700108801, 'D2021.2': 0.41222425124202955, 'K08E4.1': 1.3784955081254748, 'Y59A8B.1': 1.2456165850000227, 'Y37E3.9': 1.239984584056009, 'T27A10.3': 1.1885157207729729, 'B0024.13': 0.27429511215749425, 'B0024.9': 1.9615043095073244, 'F33A8.4': 1.2399845840560093, 'F59F5.6': 0.27437186361812976, 'AC7.2': 0.27437186361812976, 'K08H2.6': 1.09351121130875, 'M142.1': 0.27429511215749425, 'AC3.7': 1.3454919984614921, 'ZK370.2': 1.3598641485582244, 'C55A6.10': 0.6881624757639293, 'B0024.11': 1.252314684975241, 'T27E9.3': 1.3603247665464124, 'B0024.14': 0.5515952912864754, 'AC3.8': 1.1013365460799505}'\n",
+      "[ log ]: Result: '{'K01G5.2': 0.6205435700108801, 'F55F8.5': 0.8726099539023844, 'AC3.7': 1.3454919984614921, 'K08E4.1': 1.3784955081254748, 'Y59A8B.1': 1.2456165850000227, 'AC3.8': 1.1013365460799505, 'ZK370.2': 1.3598641485582244, 'D2021.2': 0.41222425124202955, 'F59F5.6': 0.27437186361812976, 'AC3.2': 0.6881624757639293, 'K08H2.6': 1.09351121130875, 'T27A10.3': 1.1885157207729729, 'R166.2': 0.874995062724865, 'T16H12.5': 0.4151608686144344, 'B0024.13': 0.27429511215749425, 'Y37E3.9': 1.239984584056009, 'AC7.2': 0.27437186361812976, '4R79.2': 2.0465757523155546, 'C55A6.10': 0.6881624757639293, 'B0024.9': 1.9615043095073244, 'F33A8.4': 1.2399845840560093, 'Y74C9A.3': 0.6111959403861045, 'B0024.11': 1.252314684975241, 'T27E9.3': 1.3603247665464124, 'M142.1': 0.27429511215749425, 'C36B7.6': 1.2933718507315621, 'B0024.14': 0.5515952912864754}'\n",
       "[ log ]: ===============================\n",
       "[ log ]: Running 'Betweenness Centrality' (10/10)\n",
-      "[ log ]: Option: '{'direction': 'both'}'\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "Sample larger than population or is negative",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [46], line 14\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[1;32m     13\u001b[0m __graph \u001b[38;5;241m=\u001b[39m di_graph \u001b[38;5;28;01mif\u001b[39;00m graph_direction \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mstr\u001b[39m(GRAPH_TYPE\u001b[38;5;241m.\u001b[39mDIRECTED) \u001b[38;5;28;01melse\u001b[39;00m graph\n\u001b[0;32m---> 14\u001b[0m __centrality \u001b[38;5;241m=\u001b[39m algorithm\u001b[38;5;241m.\u001b[39mfunc(__graph, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39malgorithm\u001b[38;5;241m.\u001b[39margs)\n\u001b[1;32m     16\u001b[0m print_log(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mResult: \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m__centrality\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     18\u001b[0m print_log(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m===============================\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[0;32m/opt/homebrew/Caskroom/mambaforge/base/envs/mgma/lib/python3.9/site-packages/networkx/utils/decorators.py:845\u001b[0m, in \u001b[0;36margmap.__call__.<locals>.func\u001b[0;34m(_argmap__wrapper, *args, **kwargs)\u001b[0m\n\u001b[1;32m    844\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mfunc\u001b[39m(\u001b[39m*\u001b[39margs, __wrapper\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):\n\u001b[0;32m--> 845\u001b[0m     \u001b[39mreturn\u001b[39;00m argmap\u001b[39m.\u001b[39;49m_lazy_compile(__wrapper)(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
-      "File \u001b[0;32m<class 'networkx.utils.decorators.argmap'> compilation 29:4\u001b[0m, in \u001b[0;36margmap_betweenness_centrality_26\u001b[0;34m(G, k, normalized, weight, endpoints, seed)\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mcollections\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mgzip\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39minspect\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mitertools\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mre\u001b[39;00m\n",
-      "File \u001b[0;32m/opt/homebrew/Caskroom/mambaforge/base/envs/mgma/lib/python3.9/site-packages/networkx/algorithms/centrality/betweenness.py:126\u001b[0m, in \u001b[0;36mbetweenness_centrality\u001b[0;34m(G, k, normalized, weight, endpoints, seed)\u001b[0m\n\u001b[1;32m    124\u001b[0m     nodes \u001b[39m=\u001b[39m G\n\u001b[1;32m    125\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m--> 126\u001b[0m     nodes \u001b[39m=\u001b[39m seed\u001b[39m.\u001b[39;49msample(\u001b[39mlist\u001b[39;49m(G\u001b[39m.\u001b[39;49mnodes()), k)\n\u001b[1;32m    127\u001b[0m \u001b[39mfor\u001b[39;00m s \u001b[39min\u001b[39;00m nodes:\n\u001b[1;32m    128\u001b[0m     \u001b[39m# single source shortest paths\u001b[39;00m\n\u001b[1;32m    129\u001b[0m     \u001b[39mif\u001b[39;00m weight \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:  \u001b[39m# use BFS\u001b[39;00m\n",
-      "File \u001b[0;32m/opt/homebrew/Caskroom/mambaforge/base/envs/mgma/lib/python3.9/random.py:449\u001b[0m, in \u001b[0;36mRandom.sample\u001b[0;34m(self, population, k, counts)\u001b[0m\n\u001b[1;32m    447\u001b[0m randbelow \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_randbelow\n\u001b[1;32m    448\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39m0\u001b[39m \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m k \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m n:\n\u001b[0;32m--> 449\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mSample larger than population or is negative\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    450\u001b[0m result \u001b[39m=\u001b[39m [\u001b[39mNone\u001b[39;00m] \u001b[39m*\u001b[39m k\n\u001b[1;32m    451\u001b[0m setsize \u001b[39m=\u001b[39m \u001b[39m21\u001b[39m        \u001b[39m# size of a small set minus size of an empty list\u001b[39;00m\n",
-      "\u001b[0;31mValueError\u001b[0m: Sample larger than population or is negative"
+      "[ log ]: Option: '{'direction': 'both'}'\n",
+      "[ log ]: Result: '{'4R79.2': 0.01846153846153846, 'F33A8.4': 0.0, 'K08E4.1': 0.0, 'Y37E3.9': 0.0, 'Y59A8B.1': 0.0, 'AC3.2': 0.0, 'C55A6.10': 0.0, 'AC3.7': 0.00923076923076923, 'C36B7.6': 0.003076923076923077, 'F55F8.5': 0.0, 'R166.2': 0.0, 'AC3.8': 0.0, 'AC7.2': 0.0, 'F59F5.6': 0.0, 'B0024.11': 0.00923076923076923, 'K01G5.2': 0.0, 'K08H2.6': 0.0, 'Y74C9A.3': 0.0, 'B0024.13': 0.0, 'M142.1': 0.0, 'B0024.14': 0.003076923076923077, 'D2021.2': 0.0, 'T16H12.5': 0.0, 'B0024.9': 0.00923076923076923, 'T27A10.3': 0.0, 'T27E9.3': 0.0, 'ZK370.2': 0.0}'\n",
+      "[ log ]: ===============================\n"
      ]
     }
    ],
@@ -287,18 +262,6 @@
     "    print_log(f\"Result: '{__centrality}'\")\n",
     "\n",
     "    print_log(f\"===============================\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "10634c99",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "config[\"func\"](di_graph, **config[\"args\"])\n",
-    "\n",
-    "config[\"func\"](di_graph, max_iter=10)"
    ]
   },
   {
