--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -244,6 +244,13 @@
     }
    ],
    "source": [
+    "def compute_algorithm(graph: nx.Graph, algorithm: CentralityAlgorithm) -> dict:\n",
+    "    \"\"\"\n",
+    "    Computes the centrality measure for the given graph\n",
+    "    \"\"\"\n",
+    "    print_log(f\"Computing {algorithm.name} centrality measure\")\n",
+    "    return algorithm.func(graph, **algorithm.args)\n",
+    "\n",
     "for i, algorithm in enumerate(algorithms_to_run):\n",
     "    algorithm_name = convert_to_normal(algorithm.name)\n",
     "    graph_direction = algorithm.options[\"direction\"]\n",
