--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -244,7 +244,7 @@
     }
    ],
    "source": [
-    "def compute_algorithm(graph: nx.Graph, algorithm: CentralityAlgorithm) -> dict:\n",
+    "def compute_algorithm(graph: nx.Graph, algorithm: CentralityAlgorithm, verbose: bool) -> dict:\n",
     "    \"\"\"\n",
     "    Computes the centrality measure for the given graph\n",
     "    \"\"\"\n",
