--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -248,8 +248,25 @@
     "    \"\"\"\n",
     "    Computes the centrality measure for the given graph\n",
     "    \"\"\"\n",
-    "    print_log(f\"Computing {algorithm.name} centrality measure\")\n",
-    "    return algorithm.func(graph, **algorithm.args)\n",
+    "    algorithm_name = convert_to_normal(algorithm.name)\n",
+    "    graph_direction = algorithm.options[\"direction\"]\n",
+    "\n",
+    "    print_log(f\"Running '{algorithm_name}' ({i+1}/{len(algorithms_to_run)})\")\n",
+    "    print_log(f\"Option: '{algorithm.options}'\")\n",
+    "\n",
+    "    # if graph is not directed or undirected, then skip -> invalid direction option\n",
+    "    if graph_direction != str(GRAPH_TYPE.BOTH) and graph_direction != str(GRAPH_TYPE.DIRECTED):\n",
+    "        print_error(f\"Invalid direction: '{graph_direction}'\")\n",
+    "        continue\n",
+    "\n",
+    "    __graph = di_graph if graph_direction == str(GRAPH_TYPE.DIRECTED) else graph\n",
+    "    __centrality = algorithm.func(__graph, **algorithm.args)\n",
+    "\n",
+    "    print_log(f\"Result: '{__centrality}'\")\n",
+    "\n",
+    "    print_log(f\"===============================\")\n",
+    "\n",
+    "    return __centrality\n",
     "\n",
     "for i, algorithm in enumerate(algorithms_to_run):\n",
     "    algorithm_name = convert_to_normal(algorithm.name)\n",
