--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -244,7 +244,7 @@
     }
    ],
    "source": [
-    "def compute_algorithms(graph: nx.Graph, algorithm: CentralityAlgorithm, verbose: bool) -> dict:\n",
+    "def compute_algorithms(graph: nx.Graph, algorithm: list(CentralityAlgorithm), verbose: bool) -> dict:\n",
     "    \"\"\"\n",
     "    Computes the centrality measures for the given graph\n",
     "    \"\"\"\n",
