--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -244,15 +244,15 @@
     }
    ],
    "source": [
-    "def compute_algorithms(graph: nx.Graph, algorithm: list(CentralityAlgorithm), verbose: bool) -> dict:\n",
+    "def compute_algorithms(graph: nx.Graph, algorithms: list(CentralityAlgorithm), verbose: bool) -> dict:\n",
     "    \"\"\"\n",
     "    Computes the centrality measures for the given graph\n",
     "    \"\"\"\n",
-    "    for i, algorithm in enumerate(algorithms_to_run):\n",
+    "    for i, algorithm in enumerate(algorithms):\n",
     "        algorithm_name = convert_to_normal(algorithm.name)\n",
     "        graph_direction = algorithm.options[\"direction\"]\n",
     "\n",
-    "        print_log(f\"Running '{algorithm_name}' ({i+1}/{len(algorithms_to_run)})\")\n",
+    "        print_log(f\"Running '{algorithm_name}' ({i+1}/{len(algorithms)})\")\n",
     "        print_log(f\"Option: '{algorithm.options}'\")\n",
     "\n",
     "        # if graph is not directed or undirected, then skip -> invalid direction option\n",
