--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -252,8 +252,9 @@
     "        algorithm_name = convert_to_normal(algorithm.name)\n",
     "        graph_direction = algorithm.options[\"direction\"]\n",
     "\n",
-    "        print_log(f\"Running '{algorithm_name}' ({i+1}/{len(algorithms)})\")\n",
-    "        print_log(f\"Option: '{algorithm.options}'\")\n",
+    "        if verbose:\n",
+    "            print_log(f\"Running '{algorithm_name}' ({i+1}/{len(algorithms)})\")\n",
+    "            print_log(f\"Option: '{algorithm.options}'\")\n",
     "\n",
     "        # if graph is not directed or undirected, then skip -> invalid direction option\n",
     "        if graph_direction != str(GRAPH_TYPE.BOTH) and graph_direction != str(GRAPH_TYPE.DIRECTED):\n",
