--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -258,7 +258,7 @@
     "\n",
     "        # if graph is not directed or undirected, then skip -> invalid direction option\n",
     "        if graph_direction != str(GRAPH_TYPE.BOTH) and graph_direction != str(GRAPH_TYPE.DIRECTED):\n",
-    "            print_error(f\"Invalid direction: '{graph_direction}'\")\n",
+    "            if verbose: print_error(f\"Invalid direction: '{graph_direction}'\")\n",
     "            continue\n",
     "\n",
     "        __graph = di_graph if graph_direction == str(GRAPH_TYPE.DIRECTED) else graph\n",
