--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -248,6 +248,7 @@
     "    \"\"\"\n",
     "    Computes the centrality measures for the given graph\n",
     "    \"\"\"\n",
+    "    centrality_measures = {}\n",
     "    for i, algorithm in enumerate(algorithms):\n",
     "        algorithm_name = convert_to_normal(algorithm.name)\n",
     "        graph_direction = algorithm.options[\"direction\"]\n",
@@ -264,9 +265,9 @@
     "        __graph = di_graph if graph_direction == str(GRAPH_TYPE.DIRECTED) else graph\n",
     "        __centrality = algorithm.func(__graph, **algorithm.args)\n",
     "\n",
-    "        print_log(f\"Result: '{__centrality}'\")\n",
-    "\n",
-    "        print_log(f\"===============================\")"
+    "        if verbose:\n",
+    "            print_log(f\"Result: '{__centrality}'\")\n",
+    "            print_log(f\"===============================\")"
    ]
   },
   {
