--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -248,7 +248,7 @@
     "    \"\"\"\n",
     "    Computes the centrality measures for the given graph\n",
     "    \"\"\"\n",
-    "    centrality_measures = {}\n",
+    "    centrality_measures = dict()\n",
     "    for i, algorithm in enumerate(algorithms):\n",
     "        algorithm_name = convert_to_normal(algorithm.name)\n",
     "        graph_direction = algorithm.options[\"direction\"]\n",
