--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -47,13 +47,11 @@
     "    options: dict = field(default_factory=dict)\n",
     "\n",
     "@dataclass(frozen=False, order=False)\n",
-    "class CentralityAlgorithm:\n",
+    "class CentralityAlgorithmOutput:\n",
     "    \"\"\"\n",
     "    A data-class to store centrality measures results\n",
     "    \"\"\"\n",
     "    name: str = field(default=\"\")\n",
-    "    func: object = field(default=print)\n",
-    "    args: dict = field(default_factory=dict)\n",
     "    options: dict = field(default_factory=dict)\n",
     "\n",
     "class GRAPH_TYPE(str, Enum):\n",
