--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -52,6 +52,7 @@
     "    A data-class to store centrality measures results\n",
     "    \"\"\"\n",
     "    name: str = field(default=\"\")\n",
+    "    results: dict = field(default_factory=dict)\n",
     "    options: dict = field(default_factory=dict)\n",
     "\n",
     "class GRAPH_TYPE(str, Enum):\n",
