--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -36,6 +36,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from typing import Union\n",
+    "\n",
+    "\n",
     "@dataclass(frozen=False, order=False)\n",
     "class CentralityAlgorithm:\n",
     "    \"\"\"\n",
@@ -52,7 +55,7 @@
     "    A data-class to store centrality measures results\n",
     "    \"\"\"\n",
     "    name: str = field(default=\"\")\n",
-    "    results: dict = field(default_factory=dict)\n",
+    "    results: Union[dict, list] = field(default_factory=dict)\n",
     "    options: dict = field(default_factory=dict)\n",
     "\n",
     "class GRAPH_TYPE(str, Enum):\n",
