--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -53,7 +53,7 @@
     "    A data-class to store centrality measures results\n",
     "    \"\"\"\n",
     "    name: str = field(default=\"\")\n",
-    "    result: Union[dict, list] = field(default_factory=Union[dict, list])\n",
+    "    result: dict = field(default_factory=dict)\n",
     "    options: dict = field(default_factory=dict)\n",
     "\n",
     "class GRAPH_TYPE(str, Enum):\n",
