--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "39d0532c",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,7 @@
     "    Converts a snake case string to a normal title string\n",
     "\n",
     "    Input:  \"this_is_a_snake_case_string\"\n",
-    "    Output: \"This Is A Snake Case String\"\n",
+    "    Output: \"Degree Centrality\"\n",
     "    \"\"\"\n",
     "    components = snake_case.split('_')\n",
     "    return \" \".join(x.title() for x in components)\n",
