--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -89,8 +89,8 @@
     "    \"\"\"\n",
     "    Converts a snake case string to a normal title string\n",
     "\n",
-    "    Input:  \"this_is_a_snake_case_string\"\n",
-    "    Output: \"Degree Centrality\"\n",
+    "    Input:  \"in_degree_centrality\"\n",
+    "    Output: \"In Degree Centrality\"\n",
     "    \"\"\"\n",
     "    components = snake_case.split('_')\n",
     "    return \" \".join(x.title() for x in components)\n",
