--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "ed4553a9",
    "metadata": {},
    "outputs": [],
@@ -253,11 +253,11 @@
     }
    ],
    "source": [
-    "def compute_algorithms(graph: nx.Graph, algorithms: list(CentralityAlgorithm), verbose: bool) -> dict:\n",
+    "def compute_algorithms(graph: nx.Graph, algorithms: list(CentralityAlgorithm), verbose: bool) -> list(CentralityAlgorithmOutput):\n",
     "    \"\"\"\n",
     "    Computes the centrality measures for the given graph\n",
     "    \"\"\"\n",
-    "    centrality_measures = dict()\n",
+    "    centrality_measures = list()\n",
     "    for i, algorithm in enumerate(algorithms):\n",
     "        algorithm_name = convert_to_normal(algorithm.name)\n",
     "        graph_direction = algorithm.options[\"direction\"]\n",
