--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -274,6 +274,8 @@
     "        __graph = di_graph if graph_direction == str(GRAPH_TYPE.DIRECTED) else graph\n",
     "        __centrality = algorithm.func(__graph, **algorithm.args)\n",
     "\n",
+    "        centrality_measures.append(CentralityAlgorithmOutput(algorithm.name, __centrality, algorithm.options))\n",
+    "\n",
     "        if verbose:\n",
     "            print_log(f\"Result: '{__centrality}'\")\n",
     "            print_log(f\"===============================\")"
