--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -275,7 +275,7 @@
     "        __centrality = algorithm.func(__graph, **algorithm.args)\n",
     "\n",
     "        if isinstance(__centrality, list):\n",
-    "            __centrality = {node: centrality for node in __centrality}\n",
+    "            __centrality = {node: 1 for node in __centrality}\n",
     "\n",
     "        centrality_measures.append(CentralityAlgorithmOutput(algorithm.name, __centrality, algorithm.options))\n",
     "\n",
