--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -201,6 +201,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "id": "1a4d2f49",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['4R79.2',\n",
+       " 'AC3.7',\n",
+       " 'B0024.11',\n",
+       " 'B0024.9',\n",
+       " 'B0024.14',\n",
+       " 'AC3.8',\n",
+       " 'AC3.2',\n",
+       " 'AC7.2',\n",
+       " 'B0024.13']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = ['4R79.2', 'AC3.7', 'B0024.11', 'B0024.9', 'B0024.14', 'AC3.8', 'AC3.2', 'AC7.2', 'B0024.13']\n",
+    "[{x:di_graph.degree(x)} for x in a]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "id": "8349750b",
    "metadata": {},
