--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -201,25 +201,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "1a4d2f49",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['4R79.2',\n",
-       " 'AC3.7',\n",
-       " 'B0024.11',\n",
-       " 'B0024.9',\n",
-       " 'B0024.14',\n",
-       " 'AC3.8',\n",
-       " 'AC3.2',\n",
-       " 'AC7.2',\n",
-       " 'B0024.13']"
+       "[{'4R79.2': 4},\n",
+       " {'AC3.7': 3},\n",
+       " {'B0024.11': 3},\n",
+       " {'B0024.9': 3},\n",
+       " {'B0024.14': 2},\n",
+       " {'AC3.8': 3},\n",
+       " {'AC3.2': 1},\n",
+       " {'AC7.2': 1},\n",
+       " {'B0024.13': 1}]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +305,7 @@
     "        __centrality = algorithm.func(__graph, **algorithm.args)\n",
     "\n",
     "        if isinstance(__centrality, list):\n",
-    "            __centrality = {node: 1 for node in __centrality}\n",
+    "            __centrality = [{x:di_graph.degree(x)} for x in __centrality]\n",
     "\n",
     "        centrality_measures.append(CentralityAlgorithmOutput(algorithm.name, __centrality, algorithm.options))\n",
     "\n",
