--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -201,32 +201,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "1a4d2f49",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'4R79.2': 4},\n",
-       " {'AC3.7': 3},\n",
-       " {'B0024.11': 3},\n",
-       " {'B0024.9': 3},\n",
-       " {'B0024.14': 2},\n",
-       " {'AC3.8': 3},\n",
-       " {'AC3.2': 1},\n",
-       " {'AC7.2': 1},\n",
-       " {'B0024.13': 1}]"
+       "{'4R79.2': 4,\n",
+       " 'AC3.7': 3,\n",
+       " 'B0024.11': 3,\n",
+       " 'B0024.9': 3,\n",
+       " 'B0024.14': 2,\n",
+       " 'AC3.8': 3,\n",
+       " 'AC3.2': 1,\n",
+       " 'AC7.2': 1,\n",
+       " 'B0024.13': 1}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "a = ['4R79.2', 'AC3.7', 'B0024.11', 'B0024.9', 'B0024.14', 'AC3.8', 'AC3.2', 'AC7.2', 'B0024.13']\n",
-    "[{x:di_graph.degree(x)} for x in a]"
+    "# [{x:di_graph.degree(x)} for x in a]\n",
+    "{node: di_graph.degree(node) for node in a}"
    ]
   },
   {
@@ -305,7 +306,7 @@
     "        __centrality = algorithm.func(__graph, **algorithm.args)\n",
     "\n",
     "        if isinstance(__centrality, list):\n",
-    "            __centrality = [{x:di_graph.degree(x)} for x in __centrality]\n",
+    "            __centrality = {node: di_graph.degree(node) for node in __centrality}\n",
     "\n",
     "        centrality_measures.append(CentralityAlgorithmOutput(algorithm.name, __centrality, algorithm.options))\n",
     "\n",
