Work in progress

--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -305,6 +305,7 @@
     "        __graph = di_graph if graph_direction == str(GRAPH_TYPE.DIRECTED) else graph\n",
     "        __centrality = algorithm.func(__graph, **algorithm.args)\n",
     "\n",
+    "        # return the degree as the weight\n",
     "        if isinstance(__centrality, list):\n",
     "            __centrality = {node: di_graph.degree(node) for node in __centrality}\n",
     "\n",
