--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -313,7 +313,9 @@
     "\n",
     "        if verbose:\n",
     "            print_log(f\"Result: '{__centrality}'\")\n",
-    "            print_log(f\"===============================\")"
+    "            print_log(f\"===============================\")\n",
+    "    \n",
+    "    return centrality_measures"
    ]
   },
   {
