--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -232,24 +232,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "8349750b",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'type' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [14], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcompute_algorithms\u001b[39m(graph: nx\u001b[38;5;241m.\u001b[39mGraph, algorithms: \u001b[38;5;28mlist\u001b[39m(CentralityAlgorithm), verbose: \u001b[38;5;28mbool\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mlist\u001b[39m(CentralityAlgorithmOutput):\n\u001b[1;32m      2\u001b[0m     \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;124;03m    Computes the centrality measures for the given graph\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m      5\u001b[0m     centrality_measures \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m()\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'type' object is not iterable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def compute_algorithms(graph: nx.Graph, algorithms: list(CentralityAlgorithm), verbose: bool) -> list(CentralityAlgorithmOutput):\n",
+    "def compute_algorithms(graph: nx.Graph, algorithms: list, verbose: bool) -> list:\n",
     "    \"\"\"\n",
     "    Computes the centrality measures for the given graph\n",
     "    \"\"\"\n",
