--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -272,6 +272,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "2911eb47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "central = compute_algorithms(di_graph, algorithms_to_run, verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "id": "3e57346c",
    "metadata": {},
