--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -277,7 +277,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "central = compute_algorithms(graph, di_graph, algorithms_to_run, verbose=True)"
+    "centrality_measures = compute_algorithms(graph, di_graph, algorithms_to_run, verbose=True)"
    ]
   },
   {
