--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -159,27 +159,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "id": "4a197da6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "27"
+       "(27, 21)"
       ]
      },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "21"
-      ]
-     },
-     "execution_count": 6,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,8 +177,7 @@
    "source": [
     "graph = nx.read_edgelist(join(data_dir, \"DM-HT_small.txt\"), nodetype=str, data=((\"weight\", float),))\n",
     "di_graph = undirected_to_directed(graph)\n",
-    "di_graph.number_of_nodes()\n",
-    "di_graph.number_of_edges()"
+    "di_graph.number_of_nodes(), di_graph.number_of_edges()"
    ]
   },
   {
