Work in progress

--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -177,6 +177,7 @@
    "source": [
     "graph = nx.read_edgelist(join(data_dir, \"DM-HT_small.txt\"), nodetype=str, data=((\"weight\", float),))\n",
     "di_graph = undirected_to_directed(graph)\n",
+    "print(f\"Number of nodes: {graph.number_of_nodes()}\\tNumber of edges: {graph.number_of_edges()}\")\n",
     "di_graph.number_of_nodes(), di_graph.number_of_edges()"
    ]
   },
