--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -159,26 +159,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "4a197da6",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(27, 21)"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of nodes: 27\n",
+      "Number of edges: 21\n"
+     ]
     }
    ],
    "source": [
     "graph = nx.read_edgelist(join(data_dir, \"DM-HT_small.txt\"), nodetype=str, data=((\"weight\", float),))\n",
     "di_graph = undirected_to_directed(graph)\n",
-    "print(f\"Number of nodes: {di_graph.number_of_nodes()}\\tNumber of edges: {di_graph.number_of_edges()}\")\n",
-    "di_graph.number_of_nodes(), di_graph.number_of_edges()"
+    "print(f\"Number of nodes: {di_graph.number_of_nodes()}\\nNumber of edges: {di_graph.number_of_edges()}\")"
    ]
   },
   {
