Work in progress

--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -85,6 +85,18 @@
     "    di_graph.add_edges_from(graph.edges())\n",
     "    return di_graph\n",
     "\n",
+    "def get_graph(graph_type: GRAPH_TYPE, graph: nx.Graph) -> nx.Graph:\n",
+    "    \"\"\"\n",
+    "    Returns the graph based on the graph type\n",
+    "    \"\"\"\n",
+    "    if graph_type == GRAPH_TYPE.DIRECTED:\n",
+    "        return graph\n",
+    "    elif graph_type == GRAPH_TYPE.BOTH:\n",
+    "        return undirected_to_directed(graph)\n",
+    "    else:\n",
+    "        print_error(f\"Unknown graph type: {graph_type}\")\n",
+    "        return graph\n",
+    "\n",
     "def convert_to_normal(snake_case: str) -> str:\n",
     "    \"\"\"\n",
     "    Converts a snake case string to a normal title string\n",
