Work in progress

--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -85,7 +85,7 @@
     "    di_graph.add_edges_from(graph.edges())\n",
     "    return di_graph\n",
     "\n",
-    "def get_graph(graph: nx.Graph, graph_type: str) -> nx.Graph:\n",
+    "def get_graph(graph: nx.Graph, graph_type: str) -> Union[nx.Graph, nx.DiGraph]:\n",
     "    \"\"\"\n",
     "    Returns the graph based on the graph type\n",
     "    \"\"\"\n",
