--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -90,10 +90,10 @@
     "    \"\"\"\n",
     "    Returns the graph based on the graph type\n",
     "    \"\"\"\n",
-    "    if graph_type == GRAPH_TYPE.DIRECTED:\n",
-    "        return graph\n",
-    "    elif graph_type == GRAPH_TYPE.BOTH:\n",
+    "    if graph_type == str(GRAPH_TYPE.DIRECTED):\n",
     "        return undirected_to_directed(graph)\n",
+    "    elif graph_type == GRAPH_TYPE.BOTH:\n",
+    "        return graph\n",
     "    else:\n",
     "        print_error(f\"Unknown graph type: {graph_type}\")\n",
     "        return graph\n",
