--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -92,7 +92,7 @@
     "    \"\"\"\n",
     "    if graph_type == str(GRAPH_TYPE.DIRECTED):\n",
     "        return undirected_to_directed(graph)\n",
-    "    elif graph_type == GRAPH_TYPE.BOTH:\n",
+    "    elif graph_type == str(GRAPH_TYPE.BOTH):\n",
     "        return graph\n",
     "    else:\n",
     "        print_error(f\"Unknown graph type: {graph_type}\")\n",
