--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -206,7 +206,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compute_algorithms(graph: nx.Graph, di_graph: nx.DiGraph, algorithms: list, verbose: bool) -> list:\n",
+    "def compute_algorithms(graph: nx.Graph, algorithms: list, verbose: bool) -> list:\n",
     "    \"\"\"\n",
     "    Computes the centrality measures for the given graph\n",
     "    \"\"\"\n",
