--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -229,7 +229,7 @@
     "\n",
     "        # return the degree as the weight\n",
     "        if isinstance(__centrality, list):\n",
-    "            __centrality = {node: di_graph.degree(node) for node in __centrality}\n",
+    "            __centrality = {node: __graph.degree(node) for node in __centrality}\n",
     "\n",
     "        centrality_measures.append(CentralityAlgorithmOutput(algorithm.name, __centrality, algorithm.options))\n",
     "\n",
@@ -246,7 +246,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "centrality_measures = compute_algorithms(graph, di_graph, algorithms_to_run, verbose=False)"
+    "centrality_measures = compute_algorithms(graph, algorithms_to_run, verbose=False)"
    ]
   },
   {
