--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -246,7 +246,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "centrality_measures = compute_algorithms(graph, algorithms_to_run, verbose=False)"
+    "centrality_measures = compute_algorithms(graph=graph, algorithms=algorithms_to_run, verbose=False)"
    ]
   },
   {
@@ -267,7 +267,7 @@
     }
    ],
    "source": [
-    "nx.draw(di_graph)"
+    "nx.draw(graph)"
    ]
   },
   {
