Work in progress

--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -64,6 +64,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "5bcf9c03",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "graph.number_of_edges()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "265c8365",
    "metadata": {},
