--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 44,
    "id": "4a197da6",
    "metadata": {},
    "outputs": [
@@ -201,13 +201,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of nodes: 27\n",
-      "Number of edges: 21\n"
+      "Number of nodes: 2989\n",
+      "Number of edges: 4660\n"
      ]
     }
    ],
    "source": [
-    "graph = nx.read_edgelist(join(data_dir, \"DM-HT_small.txt\"), nodetype=str, data=((\"weight\", float),))\n",
+    "graph = nx.read_edgelist(join(data_dir, \"DM-HT.txt\"), nodetype=str, data=((\"weight\", float),))\n",
+    "# graph = nx.read_edgelist(join(data_dir, \"DM-HT_small.txt\"), nodetype=str, data=((\"weight\", float),))\n",
     "di_graph = undirected_to_directed(graph)\n",
     "print(f\"Number of nodes: {graph.number_of_nodes()}\\nNumber of edges: {graph.number_of_edges()}\")"
    ]
