Work in progress

--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -64,27 +64,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 43,
-   "id": "5bcf9c03",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "21"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "graph.number_of_edges()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "265c8365",
    "metadata": {},
@@ -211,6 +190,28 @@
     "# graph = nx.read_edgelist(join(data_dir, \"DM-HT_small.txt\"), nodetype=str, data=((\"weight\", float),))\n",
     "di_graph = undirected_to_directed(graph)\n",
     "print(f\"Number of nodes: {graph.number_of_nodes()}\\nNumber of edges: {graph.number_of_edges()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "38f23aab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2989"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = 30\n",
+    "graph.number_of_nodes()"
    ]
   },
   {
