--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -194,24 +194,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "id": "38f23aab",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "2989"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0;31mSignature:\u001b[0m \u001b[0mnx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcomplete_multipartite_graph\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0msubset_sizes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mDocstring:\u001b[0m\n",
+      "Returns the complete multipartite graph with the specified subset sizes.\n",
+      "\n",
+      "Parameters\n",
+      "----------\n",
+      "subset_sizes : tuple of integers or tuple of node iterables\n",
+      "   The arguments can either all be integer number of nodes or they\n",
+      "   can all be iterables of nodes. If integers, they represent the\n",
+      "   number of nodes in each subset of the multipartite graph.\n",
+      "   If iterables, each is used to create the nodes for that subset.\n",
+      "   The length of subset_sizes is the number of subsets.\n",
+      "\n",
+      "Returns\n",
+      "-------\n",
+      "G : NetworkX Graph\n",
+      "   Returns the complete multipartite graph with the specified subsets.\n",
+      "\n",
+      "   For each node, the node attribute 'subset' is an integer\n",
+      "   indicating which subset contains the node.\n",
+      "\n",
+      "Examples\n",
+      "--------\n",
+      "Creating a complete tripartite graph, with subsets of one, two, and three\n",
+      "nodes, respectively.\n",
+      "\n",
+      "    >>> G = nx.complete_multipartite_graph(1, 2, 3)\n",
+      "    >>> [G.nodes[u][\"subset\"] for u in G]\n",
+      "    [0, 1, 1, 2, 2, 2]\n",
+      "    >>> list(G.edges(0))\n",
+      "    [(0, 1), (0, 2), (0, 3), (0, 4), (0, 5)]\n",
+      "    >>> list(G.edges(2))\n",
+      "    [(2, 0), (2, 3), (2, 4), (2, 5)]\n",
+      "    >>> list(G.edges(4))\n",
+      "    [(4, 0), (4, 1), (4, 2)]\n",
+      "\n",
+      "    >>> G = nx.complete_multipartite_graph(\"a\", \"bc\", \"def\")\n",
+      "    >>> [G.nodes[u][\"subset\"] for u in sorted(G)]\n",
+      "    [0, 1, 1, 2, 2, 2]\n",
+      "\n",
+      "Notes\n",
+      "-----\n",
+      "This function generalizes several other graph builder functions.\n",
+      "\n",
+      "- If no subset sizes are given, this returns the null graph.\n",
+      "- If a single subset size `n` is given, this returns the empty graph on\n",
+      "  `n` nodes.\n",
+      "- If two subset sizes `m` and `n` are given, this returns the complete\n",
+      "  bipartite graph on `m + n` nodes.\n",
+      "- If subset sizes `1` and `n` are given, this returns the star graph on\n",
+      "  `n + 1` nodes.\n",
+      "\n",
+      "See also\n",
+      "--------\n",
+      "complete_bipartite_graph\n",
+      "\u001b[0;31mFile:\u001b[0m      /opt/homebrew/Caskroom/mambaforge/base/envs/mgma/lib/python3.9/site-packages/networkx/generators/classic.py\n",
+      "\u001b[0;31mType:\u001b[0m      function\n"
+     ]
     }
    ],
    "source": [
     "n = 30\n",
-    "graph.complete"
+    "nx.complete_multipartite_graph?"
    ]
   },
   {
