--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -211,7 +211,7 @@
    ],
    "source": [
     "n = 30\n",
-    "nx.draw(nx.complete_multipartite_graph(di_graph.nodes))"
+    "nx.draw(nx.geometric_edges(di_graph.nodes, ))"
    ]
   },
   {
