Work in progress

--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -211,6 +211,8 @@
    ],
    "source": [
     "n = 30\n",
+    "c = []\n",
+    "for \n",
     "\n",
     "nx.draw(nx.connected_components(graph)[0])"
    ]
