--- a/src/lab1/src/notebooks/centrality_comparison.ipynb
+++ b/src/lab1/src/notebooks/centrality_comparison.ipynb
@@ -194,27 +194,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'generator' object is not subscriptable",
+     "ename": "NetworkXError",
+     "evalue": "G is not a line graph(partition cell not a complete subgraph)",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [65], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m n \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m30\u001b[39m\n\u001b[0;32m----> 2\u001b[0m nx\u001b[38;5;241m.\u001b[39mdraw(nx\u001b[38;5;241m.\u001b[39mconnected_components(graph)[\u001b[38;5;241m0\u001b[39m])\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'generator' object is not subscriptable"
+      "\u001b[0;31mNetworkXError\u001b[0m                             Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [66], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m root_graphs \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m comp \u001b[38;5;129;01min\u001b[39;00m nx\u001b[38;5;241m.\u001b[39mconnected_components(graph):\n\u001b[0;32m----> 4\u001b[0m     root_graphs\u001b[38;5;241m.\u001b[39mappend(nx\u001b[38;5;241m.\u001b[39minverse_line_graph(graph\u001b[38;5;241m.\u001b[39msubgraph(comp)))\n\u001b[1;32m      6\u001b[0m nx\u001b[38;5;241m.\u001b[39mdraw(root_graphs[\u001b[38;5;241m0\u001b[39m])\n",
+      "File \u001b[0;32m<class 'networkx.utils.decorators.argmap'> compilation 42:5\u001b[0m, in \u001b[0;36margmap_inverse_line_graph_38\u001b[0;34m(G)\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mgzip\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39minspect\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mitertools\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mre\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mcollections\u001b[39;00m \u001b[39mimport\u001b[39;00m defaultdict\n",
+      "File \u001b[0;32m/opt/homebrew/Caskroom/mambaforge/base/envs/mgma/lib/python3.9/site-packages/networkx/generators/line.py:282\u001b[0m, in \u001b[0;36minverse_line_graph\u001b[0;34m(G)\u001b[0m\n\u001b[1;32m    279\u001b[0m     \u001b[39mraise\u001b[39;00m nx\u001b[39m.\u001b[39mNetworkXError(msg)\n\u001b[1;32m    281\u001b[0m starting_cell \u001b[39m=\u001b[39m _select_starting_cell(G)\n\u001b[0;32m--> 282\u001b[0m P \u001b[39m=\u001b[39m _find_partition(G, starting_cell)\n\u001b[1;32m    283\u001b[0m \u001b[39m# count how many times each vertex appears in the partition set\u001b[39;00m\n\u001b[1;32m    284\u001b[0m P_count \u001b[39m=\u001b[39m {u: \u001b[39m0\u001b[39m \u001b[39mfor\u001b[39;00m u \u001b[39min\u001b[39;00m G\u001b[39m.\u001b[39mnodes}\n",
+      "File \u001b[0;32m/opt/homebrew/Caskroom/mambaforge/base/envs/mgma/lib/python3.9/site-packages/networkx/generators/line.py:401\u001b[0m, in \u001b[0;36m_find_partition\u001b[0;34m(G, starting_cell)\u001b[0m\n\u001b[1;32m    396\u001b[0m         \u001b[39mif\u001b[39;00m (u \u001b[39m!=\u001b[39m v) \u001b[39mand\u001b[39;00m (v \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m G_partition[u]):\n\u001b[1;32m    397\u001b[0m             msg \u001b[39m=\u001b[39m (\n\u001b[1;32m    398\u001b[0m                 \u001b[39m\"\u001b[39m\u001b[39mG is not a line graph\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    399\u001b[0m                 \u001b[39m\"\u001b[39m\u001b[39m(partition cell not a complete subgraph)\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    400\u001b[0m             )\n\u001b[0;32m--> 401\u001b[0m             \u001b[39mraise\u001b[39;00m nx\u001b[39m.\u001b[39mNetworkXError(msg)\n\u001b[1;32m    402\u001b[0m P\u001b[39m.\u001b[39mappend(\u001b[39mtuple\u001b[39m(new_cell))\n\u001b[1;32m    403\u001b[0m G_partition\u001b[39m.\u001b[39mremove_edges_from(\u001b[39mlist\u001b[39m(combinations(new_cell, \u001b[39m2\u001b[39m)))\n",
+      "\u001b[0;31mNetworkXError\u001b[0m: G is not a line graph(partition cell not a complete subgraph)"
      ]
     }
    ],
    "source": [
     "n = 30\n",
-    "c = []\n",
-    "for \n",
+    "root_graphs = []\n",
+    "for comp in nx.connected_components(graph):\n",
+    "    root_graphs.append(nx.inverse_line_graph(graph.subgraph(comp)))\n",
     "\n",
-    "nx.draw(nx.connected_components(graph)[0])"
+    "nx.draw(root_graphs[0])"
    ]
   },
   {
